# java-gi-app-template

./: .gitignore  README.md  build.gradle  meson.build  org.domain.Example.json  settings.gradle
data/: example-window.ui  maven-dependencies.json  meson.build  org.domain.Example.desktop.in  org.domain.Example.gresource.xml  org.domain.Example.gschema.xml  org.domain.Example.json  org.domain.Example.metainfo.xml.in  org.domain.Example.service.in
data/icons/: meson.build
po/: POTFILES.in  example.pot  meson.build  nl.po
src/: application.vala  example.gresource.xml  main.vala  meson.build  window.ui  window.vala
src/main/java/org/domain/: Example.java  ExampleApplication.java  ExampleWindow.java
src/main/java/org/domain/util/: Intl.java
